# frog-oclock

./: Cargo.toml
assets/: 1bit-palette.aseprite  Nano9.toml  ambient-bagomp.aup3  ball frog fight.aseprite  bettys house.aseprite  blank.aseprite  bonk.aup3  boop.aup3  bubble.aseprite  button.aseprite  character-portrait.aseprite  dawn-palette.aseprite  dream-path.aseprite  ehh.aup3  fight-build.aup3  fight-screen.aseprite  fmmgkj.aseprite  frog-cave.aseprite  frog.aseprite  health-bar-2.aseprite  health-bar.aseprite  house.aseprite  main-character.aseprite  main.lua  mole.aseprite  puppy.aseprite  room-blocker.aseprite  rooster.aseprite  shop interior.aseprite  shop.aseprite  sword-swing0.aup3  sword-swings.aup3  sword.aseprite  title-background.aseprite  ui-cancel.aup3  ui-click.aup3  ui-move.aup3
src/: main.rs
