[package]
name = "frog-oclock"
description = "A 1-BIT JAM 6 Game"
version = "0.1.0"
edition = "2024"
authors = ["Ryland Von Hunter", "Shane Celis <shane.celis@gmail.com>"]

[dependencies]
nano9 = { version = "0.1.0-alpha.1" }
bevy = { version = "0.15.3", features = [ "file_watcher" ] }
toml = "0.8.19"
bevy_framepace = "0.18"
